--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <title>George</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/cosmo/bootstrap.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-George
+<body ng-app="george">
+		<div ui-view></div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
-<script src="static/src/app.js"></script>
+<script src="src/app.js"></script>
 </html>
