--- a/static/views/home.html
+++ b/static/views/home.html
@@ -1,6 +1,6 @@
 <div class="home-container">
 	<div class="home-content">
 		<h1>George</h1>
-		<a href="#" class="btn btn-primary btn-lg">Large button</a>
+		<a href="#" class="btn btn-primary btn-lg">try it out</a>
 	</div>
 </div>
