--- a/static/views/home.html
+++ b/static/views/home.html
@@ -1,6 +1,13 @@
-<div class="home-container">
-	<div class="home-content">
+<div>
+	<div>
 		<h1>George</h1>
 		<a href="#" class="btn btn-primary btn-lg">try it out</a>
 	</div>
+    <div>
+        <h2>Colleges</h2>
+        <p ng-repeat="college in home.colleges">{{college}}<p>
+    </div>
+    <div>
+        <h2>About</h2>
+    </div>
 </div>
