--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,18 @@
-body {
-	
+.sidebar-container {
+    margin: 0px;
+    padding:0px 0px 0px 10px;
+    height: 100vh;
+    border-right:3px solid black;
+    width: 70px;
 }
 
-.home-container {
-	
+.sidebar-button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
-.home-content {
-	
-}
-
-.home-content h1 {
-	
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
 }
