--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
 
 <title>George</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/cosmo/bootstrap.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/paper/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body ng-app="george">
-		<div ui-view></div>
+		<div ui-view class=""></div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
