--- a/static/views/app.html
+++ b/static/views/app.html
@@ -27,6 +27,6 @@
 
         </div>
         <!-- end side bar -->
-        <div class="col-md-11" ui-view></div>
+        <div class="col-md-11 buffer" ui-view></div>
     </div>
 </div>
