--- a/templates/index.html
+++ b/templates/index.html
@@ -18,4 +18,5 @@
 <script src="src/app.js"></script>
 <script src="src/controllers.js"></script>
 <script src="src/services.js"></script>
+<script src="src/directives.js"></script>
 </html>
