--- a/static/templates/multiselect.html
+++ b/static/templates/multiselect.html
@@ -1,11 +1,12 @@
-<div>
+<div class="multiselect">
   <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a ui-sref="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Colleges<span class="caret"></span></a>
+          <a ui-sref="app.wordsearch" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Colleges<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li ng-repeat="college in colleges">
               <label>
-                <input type="checkbox">{{college}}
+                <input type="checkbox"
+                       ng-click="selectCollege({college: college})">{{college}}
               </label>
             </li>
           </ul>
