minor changes to graph

--- a/static/views/wordsearch.html
+++ b/static/views/wordsearch.html
@@ -12,7 +12,7 @@
             <input type="text"
                  class="form-control"
                  placeholder="enter a word or phrase"
-                 ng-model="term">
+                 ng-model="wordSearch.term">
         </div>
         <button
             type="submit"
