--- a/static/templates/timeseriesgraph.html
+++ b/static/templates/timeseriesgraph.html
@@ -4,7 +4,16 @@
               class="btn btn-primary margin-small"
               ng-style="{'background-color': college.color}">{{college.name}}</span>
     </div>
-    <div id="timeseries-graph" class=" buffer row">
+    <div ng-show="loading">
+        <div class="row">
+            <div class="col-xs-6 col-md-3 col-md-offset-3">
+                <a href="#" class="">
+                    <img src="../images/loadingicon.gif">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div ng-show="!loading" id="timeseries-graph" class=" buffer row">
 
     </div>
 </div>
