Modifying services for graphs

--- a/static/views/app.html
+++ b/static/views/app.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div>
-                <a class="sidebar-button" href="">
+                <a class="sidebar-button" ui-sref="app.trending">
                     <button type="button" class="btn btn-default" aria-label="Left Align">
                         <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
                     </button>
