--- a/static/views/trending.html
+++ b/static/views/trending.html
@@ -1,3 +1,19 @@
 <div class="page-header">
     <h3 class="text-center">Trending</h3>
 </div>
+<div class="row">
+    <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+            <select
+                ng-options="college for college in trending.colleges"
+                ng-model="trending.selectedCollege">
+            </select>
+        </div>
+        <button
+            type="submit"
+            class="btn btn-default"
+            ng-click="">
+            Go!
+        </button>
+    </form>
+</div>
