--- a/static/views/trending.html
+++ b/static/views/trending.html
@@ -12,8 +12,11 @@
         <button
             type="submit"
             class="btn btn-default"
-            ng-click="">
+            ng-click="trending.drawGraph()">
             Go!
         </button>
     </form>
+</div>
+<div class="row">
+    <trending-graph></trending-graph>
 </div>
