finished trending graph

--- a/static/views/home.html
+++ b/static/views/home.html
@@ -3,8 +3,8 @@
 	<div class="row">
 		<div class="jumbotron">
             <h1 class="text-center">George</h1>
-            <p class="text-center">college reddit visualization</p>
-            <p class="text-center"><a ui-sref="app.wordsearch" class="btn btn-primary btn-lg">Try it out</a></p>
+            <p class="text-center">college reddit dashboard</p>
+            <p class="text-center"><a class="btn btn-primary btn-lg">Try it out</a></p>
         </div>
 	</div>
     <!--  -->
