added route handlers and directive for creating daily activity graph

--- a/static/templates/dailyactivitypanel.html
+++ b/static/templates/dailyactivitypanel.html
@@ -6,5 +6,6 @@
         <div class="text-center">
             <h4> <span class="text-primary"> {{activity.posts}}</span> posts, <span class="text-primary"> {{activity.comments}}</span> comments today</h4>
         </div>
+        <activity-graph></activity-graph>
     </div>
 </div>
