finished activity graph

--- a/static/templates/activitygraph.html
+++ b/static/templates/activitygraph.html
@@ -1,6 +1,6 @@
 <div class="">
-  <h5 class="text-primary">Submissions Today</h5>
-  <div>
+  <h5 class="text-primary zero">Submissions Today</h5>
+  <div id="activity-graph">
 
   </div>
 </div>
