--- a/static/views/dashboard.html
+++ b/static/views/dashboard.html
@@ -23,7 +23,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-9">
-                <daily-activity-panel activity="dashboard.vm.activity"></daily-activity-panel>
+                <daily-activity-panel college="dashboard.vm.college" activity="dashboard.vm.activity"></daily-activity-panel>
             </div>
             <div class="col-md-3">
                 <trending-panel college="dashboard.vm.college"></trending-panel>
