started word tree

--- a/static/views/dashboard.html
+++ b/static/views/dashboard.html
@@ -24,6 +24,7 @@
         <div class="row">
             <div class="col-md-9">
                 <daily-activity-panel college="dashboard.vm.college" activity="dashboard.vm.activity"></daily-activity-panel>
+                <word-tree college="dashboard.vm.college"></word-tree>
             </div>
             <div class="col-md-3">
                 <trending-panel college="dashboard.vm.college"></trending-panel>
