--- a/static/templates/trendingpanel.html
+++ b/static/templates/trendingpanel.html
@@ -12,7 +12,7 @@
         </div>
         <div>
             <div ng-repeat="term in keywords">
-                <a>{{term.keyword}}</a>
+                <a ui-sref="dashboard.keyword({keyword: term.keyword})">{{term.keyword}}</a>
                 <span class="pull-right">{{term.total}}</span>
                 <div class="progress">
                     <div class="progress-bar" style="width:{{scale(term.total)}}%"></div>
