refactored graph code

--- a/static/views/summary.html
+++ b/static/views/summary.html
@@ -5,6 +5,7 @@
             <div class="col-md-9">
                 <daily-activity-panel college="summary.vm.college" activity="summary.vm.activity"></daily-activity-panel>
                 <word-tree college="summary.vm.college"></word-tree>
+                <trending-graph college="summary.vm.college"></trending-graph>
             </div>
             <div class="col-md-3">
                 <trending-panel college="summary.vm.college"></trending-panel>
