--- a/static/templates/trendinggraph.html
+++ b/static/templates/trendinggraph.html
@@ -1,8 +1,7 @@
 <div>
-    <div>
-        <p>{{current.body}}</p>
+    <div class="col-md-7" id='force-layout-graph'>
     </div>
-    <div id='force-layout-graph'>
-
+    <div class="col-md-5">
+        <submission-card submission="selected"></submission-card>
     </div>
 </div>
