--- a/templates/wordcount.html
+++ b/templates/wordcount.html
@@ -3,6 +3,6 @@
 <h1>{{college}}</h1>
 <ol>
   {% for d in data %}
-    <li>{{d._id.word}}    {{d.value}}</li>
+    <li><h1>{{d._id.word}}    {{d.value}}</h1></li>
   {% endfor %}
 </ol>
