--- a/static/views/home.html
+++ b/static/views/home.html
@@ -26,6 +26,10 @@
             </div>
         </div>
     </div>
+    
+    <div class="row">
+        <bigquery-graph></bigquery-graph>
+    </div>
 
     <!--  -->
     <div class="row">
