--- a/static/templates/bigquerygraph.html
+++ b/static/templates/bigquerygraph.html
@@ -1,6 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
 	<div class="page-header">
-                <h3 class="text-center">Score Timeseries</h3>
+                <h3 class="text-center">Average Comment Score</h3>
             </div>
 	<div class="multiselect">
 		<ul class="nav navbar-nav">
@@ -20,12 +20,14 @@
 	<div class="row buffer">
         <span ng-repeat="subreddit in vm.selected"
               class="btn btn-primary margin-small"
+              ng-style="{'background-color': getColor($index)}"
               >{{subreddit}}</span>
-        <a href="#" class="btn btn-success btn-lg"
+        <a href="" class="btn btn-success btn-lg text-right"
         	ng-click="graph()"
         >Graph</a>
     </div>
     <div class="row">
+    	<p ng-show="loading">Loading....</p>
     	<div id="bigquerygraph"></div>
     </div>
 
