--- a/static/views/home.html
+++ b/static/views/home.html
@@ -38,7 +38,7 @@
                 <h3 class="text-center">About</h3>
             </div>
             <div class="col-md-8 col-md-offset-2">
-                <p> George is a research project based in Georgia Institute of Technology’s GVU Center. The focus of our team is to study social media on college campuses throughout North America. We look at the online communities of college Subreddits and employ a variety of data visualization techniques to better understand their behavior. Contributors to this project include: Amy Bruckman, Faisal Animashaun, Haidar Jamal, Ryan Trad, Shaziya Tambawala, Michaelanne Dye, and Chad Stolper.</p>
+                <p> George is a research project based in Georgia Institute of Technology’s GVU Center. The focus of our team is to study social media on college campuses throughout North America. We look at the online communities of college Subreddits and employ a variety of data visualization techniques to better understand their behavior. Contributors to this project include: Amy Bruckman, Faisal Animashaun, Ryan Trad, Haidar Jamal, Shaziya Tambawala, Michaelanne Dye, and Chad Stolper.</p>
             </div>
         </div>
     </div>
