--- a/static/views/summary.html
+++ b/static/views/summary.html
@@ -8,6 +8,11 @@
             <div class="col-md-9">
                 <trending-graph college="summary.vm.college"></trending-graph>
             </div>
+
+        </div>
+        <div class="row">
+            <!-- <time-series-graph></time-series-graph> -->
+            <word-tree college="summary.vm.college"></word-tree>
         </div>
     </div>
 </div>
