--- a/static/views/dashboard.html
+++ b/static/views/dashboard.html
@@ -17,6 +17,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a ui-sref="dashboard.wordsearchview({college: dashboard.vm.college})" ui-sref-active="active">Word Search</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </div>
