--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body ng-app="george">
-		<div ui-view class=""></div>
+		<div ui-view></div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -20,4 +20,6 @@
 <script src="src/controllers.js"></script>
 <script src="src/services.js"></script>
 <script src="src/directives.js"></script>
+<script src="src/main/main.js"></script>
+<script src="src/dashboard/dashboard.js"></script>
 </html>
