created sentiment table

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,4 +22,5 @@
 <script src="src/directives.js"></script>
 <script src="src/main/main.js"></script>
 <script src="src/dashboard/dashboard.js"></script>
+<script src="lib/moment.js"></script>
 </html>
