--- a/templates/index.html
+++ b/templates/index.html
@@ -23,4 +23,5 @@
 <script src="src/main/main.js"></script>
 <script src="src/dashboard/dashboard.js"></script>
 <script src="lib/moment.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 </html>
