--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 <script src="src/directives.js"></script>
 <script src="src/main/main.js"></script>
 <script src="src/dashboard/dashboard.js"></script>
+<script src="src/wordsearch/wordsearch.js"></script>
 <script src="lib/moment.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 </html>
