finishing up browserify transitions

--- a/server/george/static/templates/wordsearch.html
+++ b/server/george/static/templates/wordsearch.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-	<div class="col-md-8">
+	<div class="col-md-8 margin-top-lg">
 		<div class="row">
 			<form class="navbar-form navbar-left" role="search">
 				<div class="form-group">
@@ -26,7 +26,7 @@
 			</div>
 			<div class="row">
 				<div id="word-search-graph">
-					
+
 				</div>
 			</div>
 	</div>
